[project]
name = "mewflowforandroid"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "baka ZiHao", email = "no@thank.s" }
]
dependencies = [
  "flet==0.28.3",
  "flet-audio==0.1.0",
  "aiohttp==3.9.5",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.zihaodev"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "mewflow"

# company name to display in about app dialogs
company = "bakaDev"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by ZiHao"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}

[tool.flet.splash]
android = false

[tool.flet.android]
split_per_abi = true
min_sdk_version = 21
target_sdk_version = 27